--- a/Cohelp/pom.xml
+++ b/Cohelp/pom.xml
@@ -183,6 +183,20 @@
     <artifactId>hibernate-core</artifactId>
     <version>5.4.12.Final</version>
   </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency> <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.10.3</version>
+  </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.2</version>
+    </dependency>
 
   <dependency>
     <groupId>ru.redcom.lib</groupId>
