--- a/Cohelp/pom.xml
+++ b/Cohelp/pom.xml
@@ -25,6 +25,7 @@
         </repository>
     </repositories>
 
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -48,6 +49,17 @@
 
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+
+            <groupId>com.github.HayateLaTech</groupId>
+            <artifactId>OAuth2Discord</artifactId>
+            <version>-4fded51caa-1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
         <dependency>
             <groupId>org.springframework.session</groupId>
@@ -109,6 +121,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jsp-api</artifactId>
+            <version>9.0.29</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/javax.servlet/jsp-api -->
         <dependency>
@@ -222,6 +235,16 @@
             <groupId>ru.redcom.lib</groupId>
             <artifactId>dadata-api-client</artifactId>
             <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-facebook</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vk.api</groupId>
+            <artifactId>sdk</artifactId>
+            <version>0.5.12</version>
         </dependency>
     </dependencies>
     <build>
